--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SubmitReport"></activity>
+        <activity android:name=".NonDeliveryMan"></activity>
+        <activity android:name=".SubmitReport" />
         <activity android:name=".SignatureUpload" />
         <activity android:name=".ReportImageUpload" />
         <activity android:name=".DeliveryReport" />
