--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ErrorActivity"></activity>
+        <activity android:name=".DeliveryDashboard"></activity>
+        <activity android:name=".ErrorActivity" />
         <activity android:name=".DeliveryHistory" />
-<!--        <activity android:name=".Signin" />-->
+        <activity android:name=".Signin" />
         <activity android:name=".NonDeliveryMan" />
         <activity android:name=".SubmitReport" />
         <activity android:name=".SignatureUpload" />
         <activity android:name=".ReportImageUpload" />
         <activity android:name=".DeliveryReport" />
-<!--        <activity android:name=".MainActivity">-->
+        <activity android:name=".MainActivity">
 
-             <activity android:name=".Signin">
+            <!-- <activity android:name=".Signin"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
