Image, Sign img, Report submission layout updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,11 @@
         <activity android:name=".NonDeliveryMan" />
         <activity android:name=".SubmitReport" />
         <activity android:name=".SignatureUpload" />
-        <activity android:name=".ReportImageUpload" />
+<!--        <activity android:name=".ReportImageUpload" />-->
         <activity android:name=".DeliveryReport" />
-        <activity android:name=".MainActivity">
+<!--        <activity android:name=".MainActivity">-->
 
-            <!-- <activity android:name=".Signin"> -->
+             <activity android:name=".ReportImageUpload">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
