Image successfully uploaded in our drive from capture

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,10 @@
         <activity android:name=".Signin" />
         <activity android:name=".NonDeliveryMan" />
         <activity android:name=".SubmitReport" />
-<!--        <activity android:name=".ReportImageUpload" />-->
+        <activity android:name=".ReportImageUpload" />
         <activity android:name=".SignatureUpload" />
         <activity android:name=".DeliveryReport" />
-<!--        <activity android:name=".MainActivity">-->
-
-             <activity android:name=".ReportImageUpload">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
